# glass

./: .gitignore  .headroom.yaml  .hlint.yaml  README.md  cabal.project  hie.yaml  stack.yaml
.github/headroom-templates/: haskell.mustache
.github/workflows/: ci.yml
glass-core/: CHANGELOG.md  README.md  glass-core.cabal
glass-core/src/Glass/: Types.hs
glass-core/test/: Main.hs
