cabal-version:        3.0
name:                 glass-core
version:              0.1.0
synopsis:             Tiny profunctor optics library

description:
  TBA

license:              MIT
license-file:         LICENSE
author:               Konrad Kleczkowski
maintainer:           Konrad Kleczkowski <konrad.kleczkowski@gmail.com>
category:             Data, Lenses, Profunctor

extra-source-files:
  README.md
  CHANGELOG.md

tested-with:
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.10.7
  GHC == 9.0.1

source-repository head
  type:               git
  location:           git@github.com:kleczkowski/glass.git

common common-stanza
  build-depends:      base          >= 4.10 && < 5
                    , profunctors   == 5.6.*
                    , tagged        == 0.8.*

  ghc-options:       -Wall
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wredundant-constraints
                     -Wmissing-export-lists
                     -Wunused-packages

  default-language:   Haskell2010
  default-extensions: ConstraintKinds
                      RankNTypes
                      ScopedTypeVariables
                      TypeApplications

library
  import:             common-stanza
  hs-source-dirs:     src
  exposed-modules:
    Glass.Types

test-suite glass-core-doctest
  import:             common-stanza
  type:               exitcode-stdio-1.0
  ghc-options:       -threaded
  build-depends:      doctest
                    , Glob
  hs-source-dirs:     test
  main-is:            Main.hs
